# PosParrotBack

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
PosBack/: asgi.py  settings.py  urls.py  wsgi.py
PosBack/settings/: base.py  local.py
apps/customers/: admin.py  models.py  serializers.py  urls.py  viewsets.py
apps/customers/migrations/: 0001_initial.py  0002_customer_restaurant.py  0003_alter_customer_email_and_more.py
apps/pos_systems/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
apps/pos_systems/migrations/: 0001_initial.py  0002_remove_order_table_order_tables.py  0003_category_product_orderproduct.py  0004_product_restaurants.py  0005_alter_product_image.py
apps/restaurants/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
apps/restaurants/migrations/: 0001_initial.py  0002_alter_employee_restaurant.py  0003_table.py  0004_employee_name_alter_employee_email.py
apps/users/: admin.py  forms.py  models.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: test_models.py
apps/users/tests/factories/: models_factories.py
docs/: architecture.md  deployment.md  installation.md
