[tool.poetry]
name = "posback"
version = "0.1.0"
description = ""
authors = ["josejuniorpg <yunipgx@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
